# flowit

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  CLAUDE.md  MONOREPO_STRUCTURE.md  README.md  WORK_REQUEST_REQ-002_JIT_USER_PROVISIONING.md  pyproject.toml
database/: pyproject.toml
database/schemas/: 000_migration_tracking.sql  001_core.sql  002_credentials_agents_webhooks.sql  003_node_logs_partitioned.sql  004_approval_notifications.sql  005_skill_bootstrap.sql  006_doc_parser.sql  007_langgraph_checkpoints.sql  008_oauth_security.sql  009_node_definitions.sql  010_intent_feedback.sql  011_session_storage.sql  012_agent_memory.sql  013_marketplace.sql  014_audit_logs.sql  015_node_logs_extended.sql  016_storage_execution_quality.sql  017_node_execution_states.sql  018_executions_celery_task_id.sql  018_executions_task_queue_id.sql  019_node_definitions_scope.sql  020_skills_marketplace_staging.sql  021_user_roles_expand.sql  022_document_analysis_status.sql  023_document_coverage.sql  024_personal_skills_source_document.sql  025_company_skills_seed.sql  026_oauth_connection_account_display.sql  027_oauth_access_token_expiry.sql
database/scripts/: create_partition.py  diagnose.py  export_catalog_seed.py  migrate.py  seed.py  validate.py
database/seeds/: departments.sql  node_definitions.json  system_user.sql
database/src/: __init__.py  engine.py  protocols.py
database/src/helpers/: __init__.py  hybrid_crypto.py  migration_runner.py  secure_access.py  session_manager.py
database/src/models/: __init__.py  agent.py  agent_memory.py  approval.py  audit_log.py  base.py  chat.py  checkpoint.py  credential.py  document.py  execution.py  intent_log.py  marketplace.py  node_definition.py  node_log.py  node_result.py  notification.py  oauth_connection.py  quality_gate_log.py  security_log.py  skill.py  storage_object.py  tool_execution.py  user.py  webhook.py  workflow.py  workflow_feedback.py
database/src/repositories/: __init__.py  agent_memory_repository.py  agent_repository.py  base.py  chat_repository.py  checkpoint_repository.py  credential_store.py  execution_repository.py  intent_log_repository.py  marketplace_skill_repository.py  node_definition_repository.py  oauth_connection_repository.py  parsed_document_repository.py  policy_document_repository.py  security_log_repository.py  session_repository.py  skill_repository.py  workflow_feedback_repository.py  workflow_repository.py
database/tests/: conftest.py  test_credential_store.py  test_migration_runner.py  test_models.py  test_schema_validity.py  test_session_repo.py  test_vector_search.py
modules/ai-agent/: README.md  plan.md  pyproject.toml
modules/ai_agent/: README.md  pyproject.toml
modules/ai_agent/adapters/: connection_resolver_adapter.py  node_registry_adapter.py  supervisor.py
modules/ai_agent/report/: 2026-05-14-verification-auth-node-skillbuilder.md  sprint-3-week1-2026-05-11-skills-builder.md  sprint-3-week1-2026-05-12-skills-builder.md  sprint-3-week1-2026-05-13-skills-builder.md  sprint-3-week1-2026-05-14-skills-builder.md  sprint-3-week1-2026-05-15-skills-builder.md  sprint-3-week2-2026-05-20-park-areum-fastapi-standard-status.md  sprint-3-week2-2026-05-20-skills-builder-skill-document-seed.md  sprint-3-week2-2026-05-20-skills-builder-skill-document.md  sprint-3-week2-2026-05-20-skills-builder.md  sprint-3-week2-2026-05-21-skills-builder-skilldocument-objectify.md  sprint-3-week2-2026-05-24-adr0020-delegation-status.md  sprint-3-week2-2026-05-24-skilldocument-dualwrite-auth-merged.md
modules/auth/: README.md  __init__.py  pyproject.toml
modules/auth/adapters/: __init__.py  google_oauth.py  jwt_adapter.py  middleware.py
modules/auth/application/: __init__.py  connection_providers.py
modules/auth/domain/: __init__.py
modules/auth/plan/: REQ-002-auth-plan.md
modules/auth/report/: auth_report.md  sprint-3-week2-2026-05-19-park-areum-jit-status.md  sprint-3-week2-2026-05-20-e2e-oauth-checklist.md
modules/auth/tests/: conftest.py
modules/doc-parser/: Plan.md  pyproject.toml
modules/doc-parser/adapters/: hwp_parser.py
modules/doc-parser/config/: parser_quality.yaml
modules/doc-parser/domain/: __init__.py
modules/doc_parser/: Plan.md  README.md  pyproject.toml
modules/doc_parser/adapters/: interleaving_parser.py  parser_factory.py
modules/doc_parser/config/: parser_quality.yaml
modules/doc_parser/domain/: __init__.py
modules/doc_parser/tests/: README.md  test_hwpx_page_count.py
modules/nodes-graph/: README.md  pyproject.toml
modules/nodes-graph/adapters/: __init__.py  tool_to_node_wrapper.py
modules/nodes-graph/plan/: REQ-003-nodes-graph-plan.md
modules/nodes-graph/report/: nodes_graph_report.md
modules/nodes-graph/tests/: conftest.py
modules/nodes_graph/: README.md  pyproject.toml
modules/nodes_graph/adapters/: tool_to_node_wrapper.py
modules/nodes_graph/application/: catalog_registry.py  executable_node_types.py
modules/nodes_graph/catalog/: __init__.py
modules/nodes_graph/plan/: REQ-003-nodes-graph-plan.md  sprint-3-catalog-plugin-discovery.md
modules/nodes_graph/report/: nodes_graph_report.md  sprint-3-week1-2026-05-11.md  sprint-3-week2-2026-05-19-park-areum-status.md
modules/nodes_graph/tests/: conftest.py
modules/skills_marketplace/: README.md  __init__.py  pyproject.toml
modules/skills_marketplace/plan/: REQ-013-skills-marketplace-plan.md
modules/skills_marketplace/report/: 2026-06-05-skill-binding-defect-d2.md  sprint-3-week2-2026-05-20-skills-marketplace-skilldocument-shim.md  sprint-3-week2-2026-05-20-skills-marketplace.md  sprint-3-week2-2026-05-24-skill-approval-policy.md
modules/storage/: README.md  __init__.py  pyproject.toml
modules/storage/adapters/: __init__.py  clamav_adapter.py  (+3 more)
modules/toolset/: CLAUDE.md  README.md  bootstrap.py  pyproject.toml
services/api_server/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
services/execution-engine/: Dockerfile  README.md  pyproject.toml
services/execution_engine/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
(+1197 files in other folders)
