[project]
name = "workflow-automation"
version = "0.1.0"
description = "사내 AI 자동화 스킬 마켓플레이스 플랫폼"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = [
    "services/api_server/tests",
    "services/execution_engine/tests",
    "services/common/tests",
    "modules/*/tests",
    "database/tests",
    "packages/common_schemas/python/tests",
]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
