[project]
name = "ai-agent"
version = "0.1.0"
description = "REQ-004: LangGraph 기반 13-노드 AI 에이전트, 워크플로우 자동 생성"
requires-python = ">=3.12"
dependencies = [
    "common-schemas",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "ai_agent",
    "ai_agent.domain",
    "ai_agent.domain.entities",
    "ai_agent.domain.ports",
    "ai_agent.domain.services",
    "ai_agent.domain.value_objects",
    "ai_agent.application",
    "ai_agent.application.use_cases",
    "ai_agent.adapters",
    "ai_agent.adapters.langgraph",
    "ai_agent.adapters.langgraph.nodes",
    "ai_agent.adapters.llm",
]

[tool.setuptools.package-dir]
"ai_agent" = "."
"ai_agent.domain" = "domain"
"ai_agent.domain.entities" = "domain/entities"
"ai_agent.domain.ports" = "domain/ports"
"ai_agent.domain.services" = "domain/services"
"ai_agent.domain.value_objects" = "domain/value_objects"
"ai_agent.application" = "application"
"ai_agent.application.use_cases" = "application/use_cases"
"ai_agent.adapters" = "adapters"
"ai_agent.adapters.langgraph" = "adapters/langgraph"
"ai_agent.adapters.langgraph.nodes" = "adapters/langgraph/nodes"
"ai_agent.adapters.llm" = "adapters/llm"
