[project]
name = "ai_agent"
version = "0.1.0"
description = "REQ-004: LangGraph 기반 13-노드 AI 에이전트, 워크플로우 자동 생성"
requires-python = ">=3.12"
dependencies = [
    "common_schemas",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_agent*"]
