[project]
name = "auth"
version = "0.1.0"
description = "REQ-002: 인증/인가, OAuth 연동, JWT 발급, 자격증명 암호화"
requires-python = ">=3.12"
dependencies = [
    "common_schemas",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "PyJWT>=2.8",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["auth*"]
