[project]
name = "nodes_graph"
version = "0.1.0"
description = "REQ-003: 62종 노드 정의 카탈로그, 그래프 검증, 직렬화"
requires-python = ">=3.12"
dependencies = [
    "common_schemas",
    "pydantic>=2.0",
    "httpx>=0.27",
    "fpdf2>=2.7",
    "jmespath>=1.0",
    "asyncpg>=0.29",
    "aiomysql>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nodes_graph*"]

[tool.setuptools.package-data]
# pdf_generate 노드가 번들 유니코드 폰트(한글 지원)를 런타임에 로드하므로
# wheel 빌드에 .ttf/라이선스 파일이 포함되어야 한다.
nodes_graph = ["adapters/catalog/external/assets/fonts/*.ttf", "adapters/catalog/external/assets/fonts/*.txt"]
