[project]
name = "skills_marketplace"
version = "0.1.0"
description = "REQ-013: Skills Marketplace 도메인 — 3계층(personal/team/company) 스킬 + 승격 lifecycle + 하이브리드 검색 (ADR-0012, ADR-0017)"
requires-python = ">=3.12"
dependencies = [
    "common_schemas",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skills_marketplace*"]
