[project]
name = "storage"
version = "0.1.0"
description = "REQ-008: Repository implementations, ORM models, file storage, Marketplace domain"
requires-python = ">=3.12"
dependencies = [
    "common_schemas",
    "pydantic>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "cloud-sql-python-connector[asyncpg]>=1.12",
]

[project.optional-dependencies]
gcs = ["google-cloud-storage>=2.14"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["storage*"]

[tool.ruff]
line-length = 120
