[project]
name = "execution_engine"
version = "0.1.0"
description = "REQ-007: Celery Worker + Agent Dispatcher"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "pydantic>=2.7.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
# Cloud Run worker 배포용 — dummy HTTP health server + celery worker subprocess.
# 로컬 dev에서는 'celery -A src._celery_app worker'만 직접 실행하므로 불필요.
worker = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
